kubernetesyaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
spec:
  type: LoadBalancer
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
